@@ -1,4 +1,4 @@
-Date: Mon, 13 Mar 2017 15:59:30 +0000
+Date: Tue, 23 May 2017 11:26:59 +0000
 Mime-Version: 1.0 (Produced by PhpWiki 1.6.0)
 Content-Type: application/x-phpwiki;
   pagename=ReleaseNotes;
@@ -31,6 +31,7 @@ Changes:
 ** It was possible to rename a page to a name with illegal characters, like ~[~]
 ** Remove wrong calls to setTightness in ##lib/~InlineParser.php## (bug reported by Harold Hallikainen)
 ** Importing a ZIP from an old wiki in Latin 1 (ISO 8859-1) failed. Reported by Frank Michael.
+** Better check arguments for ~GoogleMaps plugin
 * Plugins:
 ** ~UpLoad plugin: put date and author in history
 ** ~UpLoad plugin: don't inline images
